# kingsol

./: .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  docker-compose.yml  modd-grpc-web.conf  modd-web.conf  modd.conf
admin/: .gitignore  package-lock.json  package.json  protogen.sh
admin/public/: index.html
admin/src/: App.svelte  api.ts
admin/src/proto/: Kingsol_apiServiceClientPb.ts  kingsol_api_pb.d.ts  kingsol_api_pb.js
data/: dump.rdb
docker/grpc-web/: Dockerfile
docker/web/: Dockerfile
mysql/kingsol/: .skeema  links.sql  tokens.sql
proto/: kingsol_api.proto
src/: entity.rs  grpc.rs  grpc_api.rs  grpc_controller.rs  grpc_interceptor.rs  interactor.rs  lib.rs  main.rs  mysql_repository.rs  redis.rs  redis_repository.rs  repository.rs  server.rs  use_case.rs  web.rs  web_controller.rs
src/handler/: action_handler.rs  index_handler.rs  link_handler.rs  mod.rs
src/proto/: kingsol.rs  mod.rs
