[package]
name = "kingsol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
redis = { version = "0.21", features = ["r2d2"] }
r2d2 = "0.8"

[lib]
doc = false

[[bin]]
name = "server"
path = "src/bin/server.rs"
