[package]
name = "kingsol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
redis = { version = "0.21", features = ["r2d2"] }
r2d2 = "0.8"
prost = "0.10"
tokio = { version = "1.18.0", features = ["rt-multi-thread"] }
tonic = "0.7.1"
tonic-web = "0.3.0"

[build-dependencies]
tonic-build = "0.7.1"

[lib]
doc = false

[[bin]]
name = "web"
path = "src/bin/web.rs"

[[bin]]
name = "grpc-web"
path = "src/bin/grpc_web.rs"
