[package]
name = "kingsol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
prost = "0.10"
tokio = { version = "1.18.0", features = ["rt-multi-thread"] }
tonic = "0.7.1"
tonic-web = "0.3.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "mysql" ] }
async-trait = "0.1.56"

[build-dependencies]
tonic-build = "0.7.1"

[lib]
doc = false

[[bin]]
name = "web"
path = "src/bin/web.rs"

[[bin]]
name = "grpc-web"
path = "src/bin/grpc_web.rs"
